# cld_trade_advisor

./: .gitignore  CLAUDE.md  README.md  btenv  devenv  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: analyst.md  critic.md  historian.md  judge.md  proposer.md
.claude/commands/: cycle.md  sign-debate.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_simulator_tables.py  0003_train_results.py  0004_train_run_config.py  0005_train_runs_stock_code_text.py  0006_stock_corr_tables.py  0007_peak_corr_tables.py  0008_moving_corr.py  0009_moving_corr_add_gran.py  2ad6c7bb07fc_position_levels_updated_at.py  2d2f8afdc4c8_stock_clusters.py  3ce06b6696f5_add_positions_table.py  6bdd00360451_add_direction_to_positions.py  (+17 more)
configs/: dev_medium_sma_bo.yaml  dev_test_sma_bo.yaml  nikkei225.ini  stock_codes.ini
deploy/: trade-advisor-ui.service
docs/: candidate_risk_scan_prompt.md  deploy.md  evaluation_criteria.md  evaluation_guide.md  followups.md  jquants_data.md
models/: peak_cluster_2_k16.pkl  peak_reversal_2.lgb
scripts/: backup_dev_db.sh  backup_prod_db.sh  collect_prod_ohlcv.sh  extract_sign_docs.py  install.sh  install_prod.sh  install_ui_service.sh  market_data_dump.sh  rebenchmark_sign.sh  reset_prod_book.sql  run_ui.sh  setup_prod_db.sh
src/: config.py
tests/: conftest.py  test_daily_exit_advice_trail.py  test_daily_sizing_banner.py  test_jquants_collector.py  test_pead_forecast_revision.py  test_pead_peer_relative_revision.py  test_portfolio_crud.py  test_portfolio_sizing.py  test_position_levels_window.py
(+434 files in other folders)
