[project]
name = "cld-trade-advisor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "dash>=4.1.0",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "ta>=0.11.0",
    "xlrd>=2.0.2",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
